2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share-settings.c, transfer.c: added some checks to know whether
	SMB and/or NFS are installed

2005-01-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* component/*: deleted, it has been replaced by the nautilus plugin
	method

2005-01-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* nautilus/Makefile.am, gst-shares-module.c, nautilus-shares.[ch]:
	Readded context menu as a nautilus plugin
	* Makefile.am: added new directory

2005-01-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c: use new GtkMessageDialog API for HIG dialogs

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share-settings.c: replaced GnomeFileEntry with GtkFileChooserButton

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share-settings.c: manage WINS settings

2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch], main.c, share-settings.[ch]: added general SMB
	config stuff

2004-12-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.3

2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share-export-nfs.c, share-export-smb.c: fixed a couple of memleaks

2004-12-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* main.c: handled IP addresses parsing/filtering

2004-11-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* main.c: ported to GOption

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* component/.cvsignore: added
