@@ -327,3 +327,12 @@ on_share_smb_settings_clicked (GtkWidget *widget, gpointer data)
 	if (response == GTK_RESPONSE_OK)
 		smb_settings_save ();
 }
+
+void
+on_dialog_validate (GtkWidget *widget, gpointer data)
+{
+	GtkWidget *ok_button;
+
+	ok_button = gst_dialog_get_widget (tool->main_dialog, "share_properties_ok");
+	gtk_widget_set_sensitive (ok_button, share_settings_validate ());
+}
