@@ -1,3 +1,8 @@
+2005-04-07  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* callbacks.[ch], main.c, share-settings.[ch]: validate that all the
+	necessary fields are filled before adding a share. Fixes #172475
+
 2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.2.0
